mega-repo/assets/github/repos/ethereum/solidity/test/libsolidity/syntaxTests/parsing/unexpected.sol
unexpected
// ----
// ParserError 7858: (0-10): Expected pragma, import directive or contract/interface/library/user-defined type/constant/function/error/event definition.
